# serializer version: 1
# name: test_due_date_extended_message[en]
  tuple(
    'City of Helsinki',
    '''
      
      <!DOCTYPE html>
      <html lang="en">
        <body>
          <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin Asiointi</h2>
          <h1>
            New event in Parking e-service
          </h1>
          <p>
            The due date has been postponed.
          </p>
        </body>
      </html>
  
    ''',
    '''
      
      The due date has been postponed.
  
    ''',
  )
# ---
# name: test_due_date_extended_message[fi]
  tuple(
    'Helsingin kaupunki',
    '''
      
      <!DOCTYPE html>
      <html lang="fi">
        <body>
          <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin Asiointi</h2>
          <h1>
            Uusi tapahtuma Pysäköinnin Asioinnissa
          </h1>
          <p>
            Eräpäivää siirretty.
          </p>
        </body>
      </html>
  
    ''',
    '''
      
      Eräpäivää siirretty.
  
    ''',
  )
# ---
# name: test_due_date_extended_message[sv]
  tuple(
    'Helsingfors stad',
    '''
      
      <!DOCTYPE html>
      <html lang="sv">
        <body>
          <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin Asiointi</h2>
          <h1>
            Nya händelser i parkering e-tjänsten
          </h1>
          <p>
            Förfallodagen har skjutits upp.
          </p>
        </body>
      </html>
  
    ''',
    '''
      
      Förfallodagen har skjutits upp.
  
    ''',
  )
# ---
# name: test_event_message[handling-en]
  tuple(
    'City of Helsinki',
    '''
      
      <!DOCTYPE html>
      <html lang="en">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>New event in Parking e-service</h1>
        <p>
          New event has arrived in the Parking e-service: <i>In process</i>  at 15:30.
          <br>
          Sign in to parking e-services https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (This is an automated message sent by the City of Helsinki parking control e-service.
          Do not reply to this message.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      New event has arrived in the Parking e-service: In process  at 15:30.
      Sign in to parking e-services https://pysakoinninasiointi.hel.fi
      
      (This is an automated message sent by the City of Helsinki parking control
      e-service. Do not reply to this message.)
      
  
    ''',
  )
# ---
# name: test_event_message[handling-fi]
  tuple(
    'Helsingin kaupunki',
    '''
      
      <!DOCTYPE html>
      <html lang="fi">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>Uusi tapahtuma Pysäköinnin Asioinnissa</h1>
        <p>
          Pysäköinnin asiointiin on saapunut uusi tapahtuma: <i>Käsittelyssä</i>  klo 15:30.
          <br>
          Kirjaudu pysäköinnin sähköiseen asiointiin https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (Tämä on automaattinen viesti jonka on lähettänyt Helsingin kaupungin pysäköinninvalvonnan sähköinen asiointipalvelu.
          Älä vastaa tähän viestiin.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Pysäköinnin asiointiin on saapunut uusi tapahtuma: Käsittelyssä  klo 15:30.
      Kirjaudu pysäköinnin sähköiseen asiointiin https://pysakoinninasiointi.hel.fi
      
      (Tämä on automaattinen viesti jonka on lähettänyt Helsingin kaupungin
      pysäköinninvalvonnan sähköinen asiointipalvelu. Älä vastaa tähän viestiin.)
      
  
    ''',
  )
# ---
# name: test_event_message[handling-sv]
  tuple(
    'Helsingfors stad',
    '''
      
      <!DOCTYPE html>
      <html lang="sv">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>Nya händelser i parkering e-tjänsten</h1>
        <p>
          Nya händelser har kommit in i parkering e-tjänsten: <i>Bearbetning</i>  på 15:30.
          <br>
          Logga in på parkerings e-tjänster https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (Detta är ett automatiskt meddelande som skickas av Helsingfors stads parkeringsövervaknings e-tjänst.
          Svara inte på detta meddelande.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Nya händelser har kommit in i parkering e-tjänsten: Bearbetning  på 15:30.
      Logga in på parkerings e-tjänster https://pysakoinninasiointi.hel.fi
      
      (Detta är ett automatiskt meddelande som skickas av Helsingfors stads
      parkeringsövervaknings e-tjänst. Svara inte på detta meddelande.)
      
  
    ''',
  )
# ---
# name: test_event_message[received-en]
  tuple(
    'City of Helsinki',
    '''
      
      <!DOCTYPE html>
      <html lang="en">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <p>Hello,</p>
        <p>
          you have received a message in the Parking e-services:
          <br>
          Your claim for rectification has been received. You do not have to pay any potential fee before you have received a decision in the matter.
        </p>
        <p>
          Kind regards,
          <br>
          <br>
          Parking Enforcement and Parking Services
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Hello,
      
      you have received a message in the Parking e-services:
      
      Your claim for rectification has been received. You do not have to pay any
      potential fee before you have received a decision in the matter.
      
      Kind regards,
      
      Parking Enforcement and Parking Services
      
  
    ''',
  )
# ---
# name: test_event_message[received-fi]
  tuple(
    'Helsingin kaupunki',
    '''
      
      <!DOCTYPE html>
      <html lang="fi">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <p>Hei,</p>
        <p>
          sinulle on saapunut viesti pysäköinnin sähköisestä asioinnista:
          <br>
          Oikaisuvaatimuksesi on vastaanotettu. Mahdollista maksua ei tarvitse suorittaa ennen kuin olet saanut asiassa päätöksen.
        </p>
        <p>
          Terveisin
          <br>
          <br>
          Pysäköinninvalvonta ja pysäköintipalvelut
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Hei,
      
      sinulle on saapunut viesti pysäköinnin sähköisestä asioinnista:
      
      Oikaisuvaatimuksesi on vastaanotettu. Mahdollista maksua ei tarvitse
      suorittaa ennen kuin olet saanut asiassa päätöksen.
      
      Terveisin
      
      Pysäköinninvalvonta ja pysäköintipalvelut
      
  
    ''',
  )
# ---
# name: test_event_message[received-sv]
  tuple(
    'Helsingfors stad',
    '''
      
      <!DOCTYPE html>
      <html lang="sv">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <p>Hej,</p>
        <p>
          du har fått ett meddelande i parkeringens e tjänst:
          <br>
          Din begäran om omprövning har mottagits. Du behöver inte betala eventuell avgift innan du har fått ett beslut i ärendet.
        </p>
        <p>
          Med vänlig hälsning
          <br>
          <br>
          Parkeringsövervakningen och parkeringstjänster
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Hej,
      
      du har fått ett meddelande i parkeringens e tjänst:
      
      Din begäran om omprövning har mottagits. Du behöver inte betala eventuell
      avgift innan du har fått ett beslut i ärendet.
      
      Med vänlig hälsning
      
      Parkeringsövervakningen och parkeringstjänster
      
  
    ''',
  )
# ---
# name: test_event_message[resolvedViaEService-en]
  tuple(
    'City of Helsinki',
    '''
      
      <!DOCTYPE html>
      <html lang="en">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <p>Hello,</p>
        <p>
          you have received a message in the Parking e-services:
          <br>
          You have received a decision on your claim for rectification. You can read the decision by logging in to the Parking e services.
        </p>
        <p>
          Kind regards,
          <br>
          <br>
          Parking Enforcement and Parking Services
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Hello,
      
      you have received a message in the Parking e-services:
      
      You have received a decision on your claim for rectification. You can read
      the decision by logging in to the Parking e services.
      
      Kind regards,
      
      Parking Enforcement and Parking Services
      
  
    ''',
  )
# ---
# name: test_event_message[resolvedViaEService-fi]
  tuple(
    'Helsingin kaupunki',
    '''
      
      <!DOCTYPE html>
      <html lang="fi">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <p>Hei,</p>
        <p>
          sinulle on saapunut viesti pysäköinnin sähköisestä asioinnista:
          <br>
          Olet saanut päätöksen tekemääsi oikaisuvaatimukseen. Pääset lukemaan päätöksen kirjautumalla Pysäköinnin asiointiin.
        </p>
        <p>
          Terveisin
          <br>
          <br>
          Pysäköinninvalvonta ja pysäköintipalvelut
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Hei,
      
      sinulle on saapunut viesti pysäköinnin sähköisestä asioinnista:
      
      Olet saanut päätöksen tekemääsi oikaisuvaatimukseen. Pääset lukemaan
      päätöksen kirjautumalla Pysäköinnin asiointiin.
      
      Terveisin
      
      Pysäköinninvalvonta ja pysäköintipalvelut
      
  
    ''',
  )
# ---
# name: test_event_message[resolvedViaEService-sv]
  tuple(
    'Helsingfors stad',
    '''
      
      <!DOCTYPE html>
      <html lang="sv">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <p>Hej,</p>
        <p>
          du har fått ett meddelande i parkeringens e tjänst:
          <br>
          Du har fått ett beslut om din begäran om omprövning. Du kan läsa beslutet genom att logga in i parkeringens e tjänst.
        </p>
        <p>
          Med vänlig hälsning
          <br>
          <br>
          Parkeringsövervakningen och parkeringstjänster
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Hej,
      
      du har fått ett meddelande i parkeringens e tjänst:
      
      Du har fått ett beslut om din begäran om omprövning. Du kan läsa beslutet
      genom att logga in i parkeringens e tjänst.
      
      Med vänlig hälsning
      
      Parkeringsövervakningen och parkeringstjänster
      
  
    ''',
  )
# ---
# name: test_event_message[resolvedViaMail-en]
  tuple(
    'City of Helsinki',
    '''
      
      <!DOCTYPE html>
      <html lang="en">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>New event in Parking e-service</h1>
        <p>
          New event has arrived in the Parking e-service: <i>Decision has been mailed</i>  at 15:30.
          <br>
          Sign in to parking e-services https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (This is an automated message sent by the City of Helsinki parking control e-service.
          Do not reply to this message.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      New event has arrived in the Parking e-service: Decision has been mailed  at 15:30.
      Sign in to parking e-services https://pysakoinninasiointi.hel.fi
      
      (This is an automated message sent by the City of Helsinki parking control
      e-service. Do not reply to this message.)
      
  
    ''',
  )
# ---
# name: test_event_message[resolvedViaMail-fi]
  tuple(
    'Helsingin kaupunki',
    '''
      
      <!DOCTYPE html>
      <html lang="fi">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>Uusi tapahtuma Pysäköinnin Asioinnissa</h1>
        <p>
          Pysäköinnin asiointiin on saapunut uusi tapahtuma: <i>Päätös postitettu</i>  klo 15:30.
          <br>
          Kirjaudu pysäköinnin sähköiseen asiointiin https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (Tämä on automaattinen viesti jonka on lähettänyt Helsingin kaupungin pysäköinninvalvonnan sähköinen asiointipalvelu.
          Älä vastaa tähän viestiin.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Pysäköinnin asiointiin on saapunut uusi tapahtuma: Päätös postitettu  klo 15:30.
      Kirjaudu pysäköinnin sähköiseen asiointiin https://pysakoinninasiointi.hel.fi
      
      (Tämä on automaattinen viesti jonka on lähettänyt Helsingin kaupungin
      pysäköinninvalvonnan sähköinen asiointipalvelu. Älä vastaa tähän viestiin.)
      
  
    ''',
  )
# ---
# name: test_event_message[resolvedViaMail-sv]
  tuple(
    'Helsingfors stad',
    '''
      
      <!DOCTYPE html>
      <html lang="sv">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>Nya händelser i parkering e-tjänsten</h1>
        <p>
          Nya händelser har kommit in i parkering e-tjänsten: <i>Beslutsbrev postat</i>  på 15:30.
          <br>
          Logga in på parkerings e-tjänster https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (Detta är ett automatiskt meddelande som skickas av Helsingfors stads parkeringsövervaknings e-tjänst.
          Svara inte på detta meddelande.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Nya händelser har kommit in i parkering e-tjänsten: Beslutsbrev postat  på 15:30.
      Logga in på parkerings e-tjänster https://pysakoinninasiointi.hel.fi
      
      (Detta är ett automatiskt meddelande som skickas av Helsingfors stads
      parkeringsövervaknings e-tjänst. Svara inte på detta meddelande.)
      
  
    ''',
  )
# ---
# name: test_event_message[sent-en]
  tuple(
    'City of Helsinki',
    '''
      
      <!DOCTYPE html>
      <html lang="en">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>New event in Parking e-service</h1>
        <p>
          New event has arrived in the Parking e-service: <i>Sent</i>  at 15:30.
          <br>
          Sign in to parking e-services https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (This is an automated message sent by the City of Helsinki parking control e-service.
          Do not reply to this message.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      New event has arrived in the Parking e-service: Sent  at 15:30.
      Sign in to parking e-services https://pysakoinninasiointi.hel.fi
      
      (This is an automated message sent by the City of Helsinki parking control
      e-service. Do not reply to this message.)
      
  
    ''',
  )
# ---
# name: test_event_message[sent-fi]
  tuple(
    'Helsingin kaupunki',
    '''
      
      <!DOCTYPE html>
      <html lang="fi">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>Uusi tapahtuma Pysäköinnin Asioinnissa</h1>
        <p>
          Pysäköinnin asiointiin on saapunut uusi tapahtuma: <i>Lähetetty</i>  klo 15:30.
          <br>
          Kirjaudu pysäköinnin sähköiseen asiointiin https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (Tämä on automaattinen viesti jonka on lähettänyt Helsingin kaupungin pysäköinninvalvonnan sähköinen asiointipalvelu.
          Älä vastaa tähän viestiin.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Pysäköinnin asiointiin on saapunut uusi tapahtuma: Lähetetty  klo 15:30.
      Kirjaudu pysäköinnin sähköiseen asiointiin https://pysakoinninasiointi.hel.fi
      
      (Tämä on automaattinen viesti jonka on lähettänyt Helsingin kaupungin
      pysäköinninvalvonnan sähköinen asiointipalvelu. Älä vastaa tähän viestiin.)
      
  
    ''',
  )
# ---
# name: test_event_message[sent-sv]
  tuple(
    'Helsingfors stad',
    '''
      
      <!DOCTYPE html>
      <html lang="sv">
      <body>
      <h2><img alt="Logo" src="cid:{logo}" height="24px" style="margin-right: 12px;"/>Pysäköinnin
          Asiointi</h2>
      
        <h1>Nya händelser i parkering e-tjänsten</h1>
        <p>
          Nya händelser har kommit in i parkering e-tjänsten: <i>Skickat</i>  på 15:30.
          <br>
          Logga in på parkerings e-tjänster https://pysakoinninasiointi.hel.fi
          <br>
          <br>
          (Detta är ett automatiskt meddelande som skickas av Helsingfors stads parkeringsövervaknings e-tjänst.
          Svara inte på detta meddelande.)
        </p>
      
      </body>
      </html>
  
    ''',
    '''
      
      Nya händelser har kommit in i parkering e-tjänsten: Skickat  på 15:30.
      Logga in på parkerings e-tjänster https://pysakoinninasiointi.hel.fi
      
      (Detta är ett automatiskt meddelande som skickas av Helsingfors stads
      parkeringsövervaknings e-tjänst. Svara inte på detta meddelande.)
      
  
    ''',
  )
# ---
